--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     // hilt
     implementation 'com.google.dagger:hilt-android:2.41'
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
     kapt 'com.google.dagger:hilt-compiler:2.41'
 
     // navigation
